--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.0",
     "@studio-freight/lenis": "^1.0.34",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
